--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/f6a0c3659f.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/f6a0c3659f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Hexham Manor Spa</title>
-</head>
-<body>
-    <header> 
-
+  </head>
+  <body>
+    <header>
+      <div class="nav-container container-fluid bg-color-header">
+        <nav>
+          <div class="row header-inline">
+            <div class="col-md-4">
+              <a href="#" class="navbar-brand">
+                <h2 id="logo">HM</h2>
+              </a>
+            </div>
+          </div>
+          <div class="row header-inline">
+            <div class="nav-list col-md-8">
+              <ul class="list-inline">
+                <li class="list-inline-item">
+                  <a href="#" class="navbar-brand">Home</a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="navbar-brand">Our Story</a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="navbar-brand">Treatments</a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="navbar-brand">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row header-inline">
+            <div class="col-md-4">
+              <a href="#">
+                <h2 class="navbar-brand">Book Now</h2>
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
     </header>
-    <section>
-
+    <section id="hero-container">
+      <div id="hero-image"></div>
+      <h1>Hexham Manor Spa</h1>
+      <p>Relax and Restore at our luxury Spa</p>
     </section>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
