Applied styling to header

--- a/index.html
+++ b/index.html
@@ -19,42 +19,36 @@
   </head>
   <body>
     <header>
-      <div class="nav-container container-fluid bg-color-header">
-        <nav>
-          <div class="row header-inline">
-            <div class="col-md-4">
-              <a href="#" class="navbar-brand">
-                <h2 id="logo">HM</h2>
-              </a>
-            </div>
-          </div>
-          <div class="row header-inline">
-            <div class="nav-list col-md-8">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a href="#" class="navbar-brand">Home</a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#" class="navbar-brand">Our Story</a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#" class="navbar-brand">Treatments</a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#" class="navbar-brand">Contact Us</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="row header-inline">
-            <div class="col-md-4">
-              <a href="#">
-                <h2 class="navbar-brand">Book Now</h2>
-              </a>
-            </div>
-          </div>
-        </nav>
-      </div>
+        <div class="navigation-container">
+      <nav>
+        <div id="logo-container" class="navigation-bar-inline">
+          <a href="#" id="logo">
+            <h2>HM</h2>
+          </a>
+        </div>
+        <div class="nav-list navigation-bar-inline">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="#" class="navbar-brand">Home</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="navbar-brand">Our Story</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="navbar-brand">Treatments</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="navbar-brand">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <div class="navigation-bar-inline">
+          <a href="#" id="call-to-action-container">
+            <h2 id="call-to-action">Book Now</h2>
+          </a>
+        </div>
+      </nav>
+    </div>
     </header>
     <section id="hero-container">
       <div id="hero-image"></div>
