--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/f6a0c3659f.js"
       crossorigin="anonymous"
@@ -19,38 +15,25 @@
   </head>
   <body>
     <header>
-        <div class="navigation-container">
-      <nav>
-        <div id="logo-container" class="navigation-bar-inline">
-          <a href="#" id="logo">
-            <h2>HM</h2>
-          </a>
-        </div>
-        <div class="nav-list navigation-bar-inline">
-          <ul class="list-inline">
-            <li class="list-inline-item">
-              <a href="#" class="navbar-brand">Home</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="navbar-brand">Our Story</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="navbar-brand">Treatments</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="navbar-brand">Contact Us</a>
-            </li>
-          </ul>
-        </div>
-        <div class="navigation-bar-inline">
-          <a href="#" id="call-to-action-container">
-            <h2 id="call-to-action">Book Now</h2>
-          </a>
-        </div>
+      <nav role="navigation" class="navbar navbar-default navbar-expand-md navbar-light">
+        <div class="container-fluid">
+        <a href="#" class="navbar-brand">HM <i class="fa-solid fa-spa"></i></a>
+        <div class="navbar-nav navbar-right">
+      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Our Story</a>
+      <a class="nav-item nav-link" href="#">Treatments</a>
+          <a class="nav-item nav-link" href="#">Contact Us</a>
+          <div class="call-to-action-container">
+      <div class="nav-item">
+        <a class="nav-link" href="#" id="call-to-action">Book Now</a>
+      </div>
+          </div>
+          </div>
       </nav>
-    </div>
+       
     </header>
-    <section id="hero-container">
+
+    <section class="hero-container">
       <div id="hero-image"></div>
       <h1>Hexham Manor Spa</h1>
       <p>Relax and Restore at our luxury Spa</p>
