--- a/index.html
+++ b/index.html
@@ -4,40 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script
-      src="https://kit.fontawesome.com/f6a0c3659f.js"
-      crossorigin="anonymous"
-    ></script>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Hexham Manor Spa</title>
   </head>
   <body>
-    <header>
-      <nav role="navigation" class="navbar navbar-default navbar-expand-md navbar-light">
-        <div class="container-fluid">
-        <a href="#" class="navbar-brand">HM <i class="fa-solid fa-spa"></i></a>
-        <div class="navbar-nav navbar-right">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Our Story</a>
-      <a class="nav-item nav-link" href="#">Treatments</a>
-          <a class="nav-item nav-link" href="#">Contact Us</a>
-          <div class="call-to-action-container">
-      <div class="nav-item">
-        <a class="nav-link" href="#" id="call-to-action">Book Now</a>
+    <header class="header-main">
+      <div class="header-main-logo">
+        <a href="#">Hexham Manor Spa</a>
       </div>
-          </div>
-          </div>
-      </nav>
-       
+      <div class="links-cta-container">
+        <nav class="header-main-links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Treatments</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
+        <div class="header-main-cta"><a href="#">Book Now</a></div>
+      </div>
     </header>
-
-    <section class="hero-container">
-      <div id="hero-image"></div>
-      <h1>Hexham Manor Spa</h1>
-      <p>Relax and Restore at our luxury Spa</p>
-    </section>
-    <footer></footer>
+    <div class="hero-image-container">
+      <img
+        src="assets/images/attractive-african-woman-enjoying-face-massage-spa-salon.jpg"
+        alt="lady lying down having a head massage"
+      /><style>
+        img {
+          width: 100%;
+          height: 100vh;
+        }
+      </style>
+    </div>
+    <h1>Where is my image?</h1>
+    <footer>
+      <div class="footer-main"></div>
+    </footer>
   </body>
 </html>
